<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.dit.adsw.calculadora.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/primer_operando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/operando1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="end"
            android:hint="@string/introduce_operando"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/segundo_operando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primer_operando"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando_2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/operando2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/introduzca_operando"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/botonSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/segundo_operando"
        android:layout_centerInParent="true"
        android:text="@string/sumar" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonSumar"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="invisible" />
</RelativeLayout>
